conditions now working for regular expressions